# lekhamudra

./: .pre-commit-config.yaml  README.md  package-lock.json  package.json  tailwind.config.ts
.github/: dependabot.yml
.github/workflows/: linter.yml
app/: layout.tsx  page.tsx
app/auth/: page.tsx
app/dashboard/: page.tsx
app/dashboard/components/: card.tsx  document-card.tsx  document-grid.tsx  document-list.tsx  dropdown-menu.tsx  header.tsx  sidebar.tsx
app/signup/: page.tsx
app/ui/: button.tsx  input.tsx  label.tsx
backend/: .env.example  .gitignore  README.md  alembic.ini  azure_blob.py  config.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  r.txt  requirements.txt  routes_output.txt  sql_app.db  test_imports.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20250810_000001_initial.py  20250810_000002_sessions.py
backend/app/api/: deps.py
backend/app/api/v1/endpoints/: auth.py  documents.py
backend/app/core/: config.py
backend/app/crud/: crud_document.py  crud_session.py  crud_user.py
backend/app/db/: session.py
backend/app/models/: document.py  session.py  user.py
backend/app/schemas/: document.py  user.py
backend/auth/: models.py  router.py  schemas.py  security.py
backend/documents/: __init__.py  database.py  models.py  router.py  schemas.py
backend/tests/: test_health.py
fronend/: package.json
fronend/app/auth/: page.tsx
fronend/app/dashboard/: page.tsx
fronend/app/dashboard/components/: document-card.tsx  document-grid.tsx  header.tsx  (+1 more)
fronend/app/ui/: input.tsx
