[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi",
	"uvicorn[standard]",
	"passlib[bcrypt]",
	"SQLAlchemy>=2.0",
	"psycopg2-binary",
	"alembic",
	"pydantic[email]",
	"pydantic-settings",
	"python-dotenv",
	"python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
	"httpx>=0.28.1",
	"pytest>=8.4.1",
	"pre-commit>=3.7.0",
	"ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
